--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.678.0",
     "bcryptjs": "^2.4.3",
     "graphql-yoga": "^1.18.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "jest": "^26.0.1"
