--- a/app/.env.production
+++ b/app/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://18nkkf0lz0.execute-api.eu-central-1.amazonaws.com/dev/api
+REACT_APP_API_URL=https://sz4llai3tg.execute-api.eu-central-1.amazonaws.com/dev/api
